bk_ida/gobmkida/c1/do_trymove
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_trymove/src/engine/board.c:1130:35: error: use of undeclared identifier 'byte_9AA89F'
|| 3 - color != ( unsigned __int8)byte_9AA89F[pos] && 3 - color != board[pos + 1]) 
                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_trymove/src/obj/1/board.o] Error 1
